[package]
name = "rockettests"
version = "0.1.0"
authors = ["edidada <sandisks555@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde_json = "1.0"
serde_derive = "1.0.104"
log = "0.4.0"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
